ZCH-0001: Corrections and refactor